# OcamlExercises

./: .gitlab-ci.yml  f28pl-ocaml-exercises.opam
lib/: Exercises.ml  dune
test/: ExercisesTests.ml  dune
